# git_sv

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  README.md  REFACTORING_PLAN.md  STEP-001-fix-push-custom-url.md  STEP-001-staging-view-auto-select-first-file.md  STEP-002-fix-keyboard-conflict-commit-input.md  STEP-002-graph-view-tab-file-details.md  STEP-003-branch-view-enter-checkout.md  STEP-003-fix-graph-file-selection-and-light-theme.md  STEP-004-branch-input-escape-and-editing.md  STEP-004-branch-name-in-detail-view.md  STEP-005-navigate-remote-branches.md  STEP-005-remove-debug-messages.md  STEP-006-branch-delete-fix.md  STEP-006-stash-show-modified-files.md  STEP-007-conflict-space-enter-confusion.md  STEP-007-stash-files-from-staging.md  STEP-008-conflict-scroll-fix.md  STEP-008-refonte-gestion-conflits.md  STEP-009-mouse-text-selection.md  STEP-01-fix-panel-titles.md  STEP-01-fix-remote-name-resolution.md  STEP-01-fix-selection-sync.md  STEP-01-fix-theme-visibility.md  STEP-01-theme-clair-graph-view.md  STEP-010-disable-detail-panel-graph-view.md  STEP-02-fix-filter-search-navigation-crash.md  STEP-02-fix-horizontal-lines.md  STEP-02-fix-search-slash-key.md  STEP-02-fix-title-colors.md  STEP-02-restaurer-detail-commit.md  STEP-03-easy-filter-reset.md  STEP-03-fix-conflict-keep-file-refresh.md  STEP-03-fix-panel-scrolling.md  STEP-03-fix-selection-highlight.md  STEP-03-navigation-recherche-basique.md  STEP-04-column-compaction.md  STEP-04-filtres-avances-texte-illisible.md  STEP-04-fix-block-line-conflict-resolution.md  STEP-04-fix-conflict-block-line-mode.md  (+69 more)
docs/tmp/: STEP-4-fix-commit-prompt.md  STEP-6-fix-remaining-stubs.md
src/: app.rs  error.rs  error_display.rs  event.rs  main.rs  state.rs  state.rs.patch  terminal.rs  watcher.rs
src/git/: blame.rs  branch.rs  commit.rs  conflict.rs  diff.rs  discard.rs  graph.rs  helpers.rs  merge.rs  mod.rs  remote.rs  repo.rs  search.rs  stash.rs  worktree.rs
src/handler/: branch.rs  (+10 more)
tests/: integration_test.rs
(+65 files in other folders)
