[package]
name = "git_sv"
version = "0.1.0"
edition = "2021"
description = "Visualize git graph in your terminal"
license = "MIT"

[[bin]]
name = "git_sv"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
