[package]
name = "git_sv"
version = "0.1.0"
edition = "2021"
description = "Visualize git graph in your terminal"
license = "MIT"
homepage = "https://github.com/PolySim/git_sv"
repository = "https://github.com/PolySim/git_sv"
readme = "README.md"
keywords = ["git", "tui", "terminal", "graph", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git_sv"
path = "src/main.rs"

[features]
vendored-ssl = ["git2/vendored-openssl"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"
