[package]
name = "git_sv"
version = "0.1.0"
edition = "2021"
description = "Visualize git graph in your terminal"
license = "MIT"
homepage = "https://github.com/PolySim/git_sv"
repository = "https://github.com/PolySim/git_sv"
readme = "README.md"
keywords = ["git", "tui", "terminal", "graph", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git_sv"
path = "src/main.rs"

[features]
default = []
vendored-ssl = ["git2/vendored-openssl"]
profiling = []

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
dirs = "5"
arboard = "3"
lru = "0.12"

[dev-dependencies]
tempfile = "3"
insta = { version = "1.34", features = ["yaml"] }

[package.metadata.tarpaulin]
timeout = "300"
out = ["Html", "Json"]
output-dir = "coverage"
exclude-files = ["tests/*", "src/main.rs"]
